--- a/PrimeraPrueba/PrimeraPrueba/www/index.html
+++ b/PrimeraPrueba/PrimeraPrueba/www/index.html
@@ -19,7 +19,7 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Conectando con el dispositivo</p>
-                <p class="event received">El dispositivo está preparado</p>
+                <p class="event received">El dispositivo está preparado Para utilizar</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
