Agregamos una linea

--- a/PrimeraPrueba/PrimeraPrueba/www/index.html
+++ b/PrimeraPrueba/PrimeraPrueba/www/index.html
@@ -18,7 +18,7 @@
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Conectando con el dispositivo</p>
+                <p class="event listening">LINEA AGREGADA</p>
                 <p class="event received">El dispositivo está preparado Para utilizar</p>
             </div>
         </div>
