--- a/PrimeraPrueba/PrimeraPrueba/www/index.html
+++ b/PrimeraPrueba/PrimeraPrueba/www/index.html
@@ -20,6 +20,7 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">LINEA AGREGADA</p>
                 <p class="event received">El dispositivo está preparado Para utilizar</p>
+                <p class="event received">Lorem lorena</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
